@@ -241,14 +241,22 @@ name|IOException
 block|{
 name|CacheValue
 name|val
-init|=
+decl_stmt|;
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+name|val
+operator|=
 name|byDirectoryCache
 operator|.
 name|get
 argument_list|(
 name|dir
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|val
